--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #000;
-  font-family: "Playfair Display", Georgia, serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* font-family: "Playfair Display", Georgia, serif; */
   font-weight: 400;
   margin: 0 0 30px 0; }
 
@@ -413,11 +414,11 @@ body.offcanvas {
   position: relative; }
 
 .colorlib-heading {
-  font-size: 18px;
+  font-size: 30px;
   margin-bottom: 4em;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   line-height: 1.8;
   position: relative; }
   .colorlib-heading span {
